test: (refactor) adjust test for notification